<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Unimot</string>
    <string name="register">register</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="username">Username</string>
    <string name="continue_with_google">continue with google</string>
    <string name="continue_with_facebook">continue with facebook</string>
    <string name="confirm_email">confirm email</string>
    <string name="sign_up">Sign up</string>
    <string name="email">email</string>
    <string name="create_a_new_nunimot_account">Create a new \nUnimot account</string>
    <string name="register_my_account">register my account</string>
    <string name="or">OR</string>
    <string name="deviceIcon">device type</string>
    <string name="settings">Settings</string>
    <string name="new_device">new device</string>
    <string name="edit">Edit</string>
    <string name="mode">Mode</string>
    <string name="power">power</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="enable_bluetooth_instructions">To provision your new remote, please make sure that your Phone\'s Location and Bluetooth are turned on and  Phone is within range of your new remote.</string>
    <string name="device_id">device id</string>

    <!--  Error Messages  -->
    <string name="error_ble_not_supported">Sorry! BLE is not supported. try TODO</string>
    <string name="error_bluetooth_not_supported">Sorry! Bluetooth is not supported. try TODO</string>
    <string name="dialog_provision_wifi">Insert wifi credentials</string>
    <string name="provision_new_remote">Provision new remote</string>
    <string name="cancel">Cancel</string>
    <string name="error_no_remote_found">No Unimot remotes found</string>
    <string name="permmision_location_request">Please give location permission to connect device</string>
    <string name="error_title">Error!</string>
    <string name="btn_ok">OK</string>
    <string name="dialog_msg_gps">Location services are disabled. Please enable them to continue</string>
    <string name="toast_location_perm_denied">Provisioning requires location permission</string>
    <string name="tv_remotes">remotes:</string>
    <string name="prov_step_sending_text">Sending Wi-Fi credentials</string>
    <string name="prov_step_applying_text">Applying Wi-Fi connection</string>
    <string name="prov_step_checking_text">Checking provisioning status</string>
    <string name="error_session_creation">Failed to create session</string>
    <string name="dialog_msg_ble_device_disconnection">Device disconnected.</string>
    <string name="error_prov_step_sending">Failed to send Wi-Fi credentials.</string>
    <string name="error_prov_step_applying">Failed to apply Wi-Fi credentials.</string>
    <string name="error_prov_step_checking">Failed to provision remote.</string>
    <string name="error_authentication_failed">Wi-Fi Authentication failed.</string>
    <string name="alert_reset_remote"> Reset Remote</string>
    <string name="error_network_not_found">Network not found.</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="btn_signIn">Sign In</string>
    <string name="device_exists">Device with these fields already exists</string>
</resources>